# Sift

./: .gitignore  .siftignore  README.md  entropy_test.txt  pyproject.toml  requirements.txt  sarif_test.txt  test_secrets.txt
.github/workflows/: sift.yml
docs/: sift_architecture_design.md
src/sift/: __main__.py  precommit.py  runner.py  scoring.py
src/sift/detectors/: entropy.py  regex.py
src/sift/reporters/: console.py  json_reporter.py  sarif_reporter.py
tests/: test_regex_editor.py  test_scoring.py
