[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sift"
version = "0.1.0"
description = "Offline, pre-commit detector for exposed secrets and credentials"
authors = [{ name = "Antony Manjila" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0"
]

[project.scripts]
sift = "sift.__main__:cli"
